# OTUS_HW1

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.cnf  pyproject.toml
.github/workflows/: lint.yml  test.yml
src/otus_hw1/: log_analyzer.py
tests/: test.py
