[project]
name = "otus-hw1"
version = "0.1.0"
description = ""
authors = [
    {name = "PleaseMePython",email = "Please.Me.Python@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "structlog (>=25.1.0,<26.0.0)"
]

[tool.poetry]
packages = [{include = "otus_hw1", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
pre-commit = "^4.1.0"
mypy = "^1.15.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.format]
exclude = ["*.pyi"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
